--- a/lswt.1
+++ b/lswt.1
@@ -1,16 +1,14 @@
-.TH lsft 1 2021 Wayland
+.TH lswt 1 2021-03-07
 
 .SH NAME
-lsft - list foreign toplevels
+lswt - list Wayland toplevels
 
 .SH SYNOPSIS
-lsft [options...]
+lswt [options...]
 
 .SH DESCRIPTION
-lsft will list all foreign toplevels advertised by a Wayland server.
-.P
-The Wayland server must implement the foreign-toplevel-management-unstable-v1
-protocol extension.
+lswt will list all toplevels advertised by a Wayland server using the
+foreign-toplevel-management-unstable-v1 protocol extension.
 
 .SH OPTIONS
 \fB-h\fR, \fB--help\fR
