Add option to output data as TSV

--- a/lswt.1
+++ b/lswt.1
@@ -21,6 +21,12 @@ Print help text and exit.
 Show all available information about the toplevels.
 .P
 .RE
+\fB-t\fR, \fB--tsv\fR
+.RS 4
+Output data (title, app-id, maximized, minimized, activated, fullscreen) as tab
+separated values. Implicitly enables \fB-a\fR.
+.P
+.RE
 \fB-j\fR, \fB--json\fR
 .RS 4
 Output data in the JSON format. Implicitly enables \fB-a\fR.
