Add '-v', '--version' flag

--- a/lswt.1
+++ b/lswt.1
@@ -39,6 +39,11 @@ keep the output consistent.
 Print help text and exit.
 .P
 .RE
+\fB-v\fR, \fB--version\fR
+.RS 4
+Print version and exit.
+.P
+.RE
 \fB-t\fR, \fB--tsv\fR
 .RS 4
 Output data as tab separated values. The values are ordered as follows: title,
